Sun Nov 12 05:16:28 1995  Mark W. Eichin  <eichin@cygnus.com>

	* krb5.conf[libdefaults]: add krb4_config, krb4_realms.

Sat Oct 21 09:07:59 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)
    
	* kdc.conf.M: Fixed typo

	* configure.in, Makefile.in: Install manual pages.

	* .Sanitize: Update file list

	* .cvsignore: Ignore configure

Thu Oct  5 22:38:24 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdc.conf.M: Documented kdc_ports, and removed references to
		primary_port and secondary_port, which are no longer used.

Wed Sep 13 18:40:24 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdc.conf.M (profile): Remove definition of the profile field,
		which is being desupported.

Fri Sep  1 23:26:46 1995  Theodore Y. Ts'o  <tytso@dcl>

	* krb5.conf.M: Add documentation for the clockskew and
		kdc_timesync relations in the libdefaults section.

Thu Aug 24 19:24:26 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Mon Aug 21 16:59:00 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdc.conf.M - Change types of master_key_type and encryption_type to
		be "key type string" and "encryption type string".  Add
		default_principal_expiration, default_principal_flags and
		supported_keytypes.


Wed Jul 12 12:06:10 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdc.conf[.M] - Change syntax.  KDC now has per-realm information in
		[realms] section and has [kdcdefaults] to contain global data.
		Add profile and secondary_port per-realm data.


Fri Jun 23 10:36:48 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdc.conf[.M] - Add description of new KDC configuration file.


Thu Jun 8 15:00:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* krb5.conf.M - Add description of logging profile entries.

Fri May  5 00:58:55 1995  Theodore Y. Ts'o  (tytso@dcl)

	* krb5.conf: Add example of the new [realms]/<realm>/
		v4_instance_convert/<instance> form used by
		krb5_425_convert_principal.

	* krb5.conf.M: Document new v4_instance_convert subsection.

Tue Apr 25 22:04:54 1995  Theodore Y. Ts'o  <tytso@dcl>
