@@ -1,3 +1,8 @@
+Wed Jan 10 22:13:04 1996  Theodore Y. Ts'o  <tytso@dcl>
+
+	* krb5.conf.M: Added documentation for the DCE compat options,
+		plus the capaths section.
+
 Sun Nov 12 05:16:28 1995  Mark W. Eichin  <eichin@cygnus.com>
 
 	* krb5.conf[libdefaults]: add krb4_config, krb4_realms.
